[package]
name = "seen"
version = "0.1.0"
edition = "2021"
authors = ["Xiangpeng Hao <haoxiangpeng123@gmail.com>"]


[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ['http', "d1"] }
worker-macros = { version = "0.5.0", features = ['http'] }
worker-kv = { version = "0.8.0" }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
regex = "1.11.1"
uuid = { version = "1.15.1", features = ["v4", "js"] }
base64 = "0.22.1"
